--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
-    
 </head>
 <body>
     <header>
         <h1>OVERTONE</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Sobre nós</a>
-            <a href="#">Nossos Artistas</a>
-            <a href="#">Agenda</a>
-            <a href="#">Login</a>
+            <button type="submit"><a href="#">Home</a></button>
+            <button type="submit">Sobre nós</button>
+            <button type="submit">Nossos Artistas</button>
+            <button type="submit"><a href="pag/agenda.html">Agenda</a></button>
+            <button type="submit">Login</button>
         </nav>
 
         
