Atualizei o header mais em manutenção ainda

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Home</title>
 </head>
 <body>
-    <header>
-        <h1>OVERTONE</h1>
+    <header class="cabeca">
+
         <nav>
             <a href="#">Home</a>
             <a href="#">Nossa Historia</a>
