modifiquei logo no header

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <title>Home</title>
 </head>
 <body>
-    <header class="cabeca">
-
-        <nav>
+    <header >
+        <div class="imagem">
+            <picture >
+                <source media="(max-width: 650px)" srcset="img/Marca-Vertical-Branca.png" sizes="image/png">
+                <img id="img" src="img/Marca-Horizontal-Branca.png"  alt="Logo-Overtone">
+            </picture>
+        </div>
+        <nav class="cabeca">
             <a href="#">Home</a>
             <a href="#">Nossa Historia</a>
             <a href="#"> Artistas</a>
-            <a href="#">Agenda</a>
+            <a href="#">Agendamento</a>
             <a href="#">Login</a>
         </nav>
     </header>
