criei pagina agendamento

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="">Home</a>
             <a href="#">Nossa Historia</a>
             <a href="#"> Artistas</a>
-            <a href="#">Agendamento</a>
+            <a href="agendamento.html">Agendamento</a>
             <a href="endereco.html">Endereço</a>
             <a href="#">Login</a>
         </nav>
