criei pagina de artistas

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="cabeca">
             <a href="">Home</a>
             <a href="#">Nossa Historia</a>
-            <a href="#"> Artistas</a>
+            <a href="artistas.html"> Artistas</a>
             <a href="agendamento.html">Agendamento</a>
             <a href="endereco.html">Endereço</a>
             <a href="#">Login</a>
