--- a/endereco.html
+++ b/endereco.html
@@ -64,7 +64,7 @@
             margin: auto;
             margin-top: 50px;
             margin-bottom: 50px;
-            
+            background-color: rgba(0, 0, 0, 0.411);
             box-shadow: 2px 3px 20px 3px rgb(0 0 0 / 60%)
             
         }
@@ -76,8 +76,8 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Nossa Historia</a>
-            <a href="#"> Artistas</a>
-            <a href="#">Agendamento</a>
+            <a href="artistas.html"> Artistas</a>
+            <a href="agendamento.html">Agendamento</a>
             <a href="#">Endereço</a>
             <a href="#">Login</a>
         </nav>
