--- a/artistas.html
+++ b/artistas.html
@@ -57,14 +57,25 @@
             text-align: center;
             tex-shadow: 1px 1px 8px rgba(0, 0, 0, 0.74);
         }
+        main > h2 {
+            text-align: center;
+        }
         main > p {
             text-align: center;
         }
-        div.box {
-            text-align: center;
-            display: block;
-            
-            border-radius: 20px;
+        div.video {
+            margin: auto;
+            padding: 20px;
+            position: relative;
+            height: 258px;
+            width: 472px;
+        }
+        div.video > iframe {
+            position: absolute;
+            top: 5%;
+            left: 5%;
+            width: 90%;
+            height: 90%;
         }
         a {
             text-decoration: none;
@@ -91,9 +102,10 @@
     </header>
     <main>
         <h1>Confira</h1>
-            <div class="box">
-                <h2>- <a href="https://www.youtube.com/channel/UCy99_QyOTVLdjH2kakE8SuA/featured" target="_blank">Supernova Band</a> -</h2>
-                <iframe width="400" height="250" src="https://www.youtube.com/embed/_5ipoaImL1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h2>- <a href="https://www.youtube.com/channel/UCy99_QyOTVLdjH2kakE8SuA/featured" target="_blank">Supernova Band</a> -</h2>
+            
+        <div class="video">
+            <iframe width="350" height="200" src="https://www.youtube.com/embed/_5ipoaImL1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
     </main>
 
